修复一些bug，base64支持非文本文件

--- a/README
+++ b/README
@@ -1,3 +1,19 @@
+运行环境：windows+Python3
+实现功能：
+- Go-Back-N
+- 选择重传
+- 丢包、失序、重复，一共六个测试
+- 任意文件传输(base64)
+
+使用方式：
+``` sh
+python TestHarness.py -s Sender.py -r Receiver.py 
+# 可用-f指定文件，不指定默认文件为README，例如-f Calvin.jpg
+```
+运行截图：![image-20220104161815562](https://s2.loli.net/2022/01/04/M6oKeCQmxaE4OPX.png)
+
+以下是原README：
+
 In this folder you'll find the sample receiver, code for computing and
 validating checksums, as well as example sender code.
 
@@ -20,20 +36,20 @@ your reliable sender. It provides the following methods:
         BasicSender. Specify the destination's hostname, the port at which 
         the receiver is listening, and a filename to transmit. If no filename
         is provided, it will read from STDIN.
-
+    
     receive(self, timeout): Receive a packet. Waits for a packet before
         returning. Optionally you can specify a maximum timeout to wait for a
         packet. Returns the received packet as a string, or None if receive
         times out.
-
+    
     send(self,message): Sends message to the receiver specified when you
         created the sender.
-
+    
     make_packet(self,msg_type,seqno,message): Creates a RUDP packet from
         the specified message type, sequence number, and message. Generates the
         appropriate checksum, and returns the full RUDP packet with
         checksum appended.
-
+    
     split_packet(self,packet): Given a RUDP packet, splits a packet into a
         tuple of the form (msg_type, seqno, data, checksum). For packets
         without a data field, the data element will be the empty string.
@@ -60,7 +76,7 @@ your packets:
     validate_checksum(message): Returns true if the message's checksum matches
         the message, and false otherwise. This function assumes the last field
         of the message the checksum.
-
+    
     generate_checksum(message): Returns the checksum string for a message. This
         function assumes the message includes the trailing delimiter. The
         checksum is ONLY valid if you simply append this function's result to
@@ -94,3 +110,7 @@ cases you add.
 Passing the basic test cases we provide is a necessary but not sufficient
 condition for doing well on this project; there are still cases that they do not cover. 
 
+
+```
+
+```
